// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code Export C# xUnit should export a suite 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Remote;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using Xunit;
namespace Login
{
public class SuiteTests : IDisposable {
  public IWebDriver driver {get; private set;}
  public IDictionary<String, Object> vars {get; private set;}
  public IJavaScriptExecutor js {get; private set;}
  public SuiteTests()
  {
    driver = new ChromeDriver();
    js = (IJavaScriptExecutor)driver;
    vars = new Dictionary<String, Object>();
  }
  public void Dispose()
  {
    driver.Quit();
  }
  [Fact]
  public void Validcredentials() {
    driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/login\\");
    driver.Manage().Window.Size = new System.Drawing.Size(1440, 1177);
    driver.FindElement(By.Id(\\"username\\")).SendKeys(\\"tomsmith\\");
    driver.FindElement(By.Id(\\"password\\")).SendKeys(\\"SuperSecretPassword!\\");
    driver.FindElement(By.CssSelector(\\"#login button\\")).Click();
    Assert.Equal(driver.FindElement(By.CssSelector(\\".flash.success\\")).Text, \\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\");
  }
  [Fact]
  public void Invalidcredentials() {
    driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/login\\");
    driver.Manage().Window.Size = new System.Drawing.Size(1440, 1177);
    driver.FindElement(By.Id(\\"username\\")).SendKeys(\\"blah\\");
    driver.FindElement(By.Id(\\"password\\")).SendKeys(\\"blah\\");
    driver.FindElement(By.CssSelector(\\"#login button\\")).Click();
    Assert.Equal(driver.FindElement(By.Id(\\"flash\\")).Text, \\"Your username is invalid!\\\\\\\\\\\\\\\\n×\\");
  }
}
}"
`;

exports[`Code Export C# xUnit should export a suite that uses control flow commands 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Remote;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using Xunit;
namespace Controlflow
{
public class SuiteTests : IDisposable {
  public IWebDriver driver {get; private set;}
  public IDictionary<String, Object> vars {get; private set;}
  public IJavaScriptExecutor js {get; private set;}
  public SuiteTests()
  {
    driver = new ChromeDriver();
    js = (IJavaScriptExecutor)driver;
    vars = new Dictionary<String, Object>();
  }
  public void Dispose()
  {
    driver.Quit();
  }
  [Fact]
  public void Controlflowif() {
    vars[\\"myVar\\"] = js.ExecuteScript(\\"return 'a'\\");
    if ((Boolean) js.ExecuteScript(\\"return (arguments[0] === 'a')\\", vars[\\"myVar\\"])) {
      vars[\\"output\\"] = js.ExecuteScript(\\"return 'a'\\");
    } else if ((Boolean) js.ExecuteScript(\\"return (arguments[0] === 'b')\\", vars[\\"myVar\\"])) {
      vars[\\"output\\"] = js.ExecuteScript(\\"return 'b'\\");
    } else {
      vars[\\"output\\"] = js.ExecuteScript(\\"return 'c'\\");
    }
    Assert.Equal(vars[\\"output\\"].ToString(), \\"a\\");
  }
  [Fact]
  public void Controlflowelseif() {
    vars[\\"myVar\\"] = js.ExecuteScript(\\"return 'b'\\");
    if ((Boolean) js.ExecuteScript(\\"return (arguments[0] === 'a')\\", vars[\\"myVar\\"])) {
      vars[\\"output\\"] = js.ExecuteScript(\\"return 'a'\\");
    } else if ((Boolean) js.ExecuteScript(\\"return (arguments[0] === 'b')\\", vars[\\"myVar\\"])) {
      vars[\\"output\\"] = js.ExecuteScript(\\"return 'b'\\");
    } else {
      vars[\\"output\\"] = js.ExecuteScript(\\"return 'c'\\");
    }
    Assert.Equal(vars[\\"output\\"].ToString(), \\"b\\");
  }
  [Fact]
  public void Controlflowelse() {
    vars[\\"myVar\\"] = js.ExecuteScript(\\"return 'c'\\");
    if ((Boolean) js.ExecuteScript(\\"return (arguments[0] === 'a')\\", vars[\\"myVar\\"])) {
      vars[\\"output\\"] = js.ExecuteScript(\\"return 'a'\\");
    } else if ((Boolean) js.ExecuteScript(\\"return (arguments[0] === 'b')\\", vars[\\"myVar\\"])) {
      vars[\\"output\\"] = js.ExecuteScript(\\"return 'b'\\");
    } else {
      vars[\\"output\\"] = js.ExecuteScript(\\"return 'c'\\");
    }
    Assert.Equal(vars[\\"output\\"].ToString(), \\"c\\");
  }
  [Fact]
  public void Controlflowdo() {
    vars[\\"check\\"] = js.ExecuteScript(\\"return 1\\");
    do {
      vars[\\"check\\"] = js.ExecuteScript(\\"return arguments[0] + 1\\", vars[\\"check\\"]);
    } while ((Boolean) js.ExecuteScript(\\"return (arguments[0] < 3)\\", vars[\\"check\\"]));
    Assert.Equal(vars[\\"check\\"].ToString(), \\"3\\");
  }
  [Fact]
  public void Controlflowtimes() {
    vars[\\"check\\"] = js.ExecuteScript(\\"return 1\\");
    var times = 2;
    for(int i = 0; i < times; i++) {
      vars[\\"check\\"] = js.ExecuteScript(\\"return arguments[0] + 1\\", vars[\\"check\\"]);
    }
    Assert.Equal(vars[\\"check\\"].ToString(), \\"3\\");
  }
  [Fact]
  public void Controlflowwhile() {
    vars[\\"check\\"] = js.ExecuteScript(\\"return 1\\");
    while ((Boolean) js.ExecuteScript(\\"return (arguments[0] < 3)\\", vars[\\"check\\"])) {
      vars[\\"check\\"] = js.ExecuteScript(\\"return arguments[0] + 1\\", vars[\\"check\\"]);
    }
    Assert.Equal(vars[\\"check\\"].ToString(), \\"3\\");
  }
}
}"
`;

exports[`Code Export C# xUnit should export a suite with a reused test method 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Remote;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using Xunit;
namespace Login
{
public class SuiteTests : IDisposable {
  public IWebDriver driver {get; private set;}
  public IDictionary<String, Object> vars {get; private set;}
  public IJavaScriptExecutor js {get; private set;}
  public SuiteTests()
  {
    driver = new ChromeDriver();
    js = (IJavaScriptExecutor)driver;
    vars = new Dictionary<String, Object>();
  }
  public void Dispose()
  {
    driver.Quit();
  }
  public void login() 
  {
    driver.Navigate().GoToUrl(\\"https://the-internet.herokuapp.com/\\");
    driver.FindElement(By.LinkText(\\"Form Authentication\\")).Click();
    driver.FindElement(By.Id(\\"username\\")).SendKeys(vars[\\"username\\"].ToString());
    driver.FindElement(By.Id(\\"password\\")).SendKeys(vars[\\"password\\"].ToString());
    if ((Boolean) js.ExecuteScript(\\"return (true)\\")) {
      driver.FindElement(By.CssSelector(\\".fa\\")).Click();
    }
  }
  [Fact]
  public void Invalidcredentials() {
    vars[\\"username\\"] = \\"blah\\";
    vars[\\"password\\"] = \\"blah\\";
    login();
  }
  [Fact]
  public void Validcredentials() {
    vars[\\"username\\"] = \\"tomsmith\\";
    vars[\\"password\\"] = \\"SuperSecretPassword!\\";
    login();
  }
}
}"
`;

exports[`Code Export C# xUnit should export a suite with commands that open a new window inside of a reused test method 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Remote;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using Xunit;
namespace DefaultSuite
{
public class SuiteTests : IDisposable {
  public IWebDriver driver {get; private set;}
  public IDictionary<String, Object> vars {get; private set;}
  public IJavaScriptExecutor js {get; private set;}
  public SuiteTests()
  {
    driver = new ChromeDriver();
    js = (IJavaScriptExecutor)driver;
    vars = new Dictionary<String, Object>();
  }
  public void Dispose()
  {
    driver.Quit();
  }
  public string waitForWindow(int timeout) {
    try {
      Thread.Sleep(timeout);
    } catch(Exception e) {
      Console.WriteLine(\\"{0} Exception caught.\\", e);
    }
    var whNow = ((IReadOnlyCollection<object>)driver.WindowHandles).ToList();
    var whThen = ((IReadOnlyCollection<object>)vars[\\"WindowHandles\\"]).ToList();
    if (whNow.Count > whThen.Count) {
      return whNow.Except(whThen).First().ToString();
    } else {
      return whNow.First().ToString();
    }
  }
  public void selectwindow() 
  {
    driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/windows\\");
    vars[\\"WindowHandles\\"] = driver.WindowHandles;
    driver.FindElement(By.LinkText(\\"Click Here\\")).Click();
    vars[\\"win9425\\"] = waitForWindow(2000);
    driver.SwitchTo().Window(vars[\\"win9425\\"].ToString());
    Assert.Equal(driver.Title, \\"New Window\\");
  }
  [Fact]
  public void Reuse() {
    selectwindow();
  }
}
}"
`;

exports[`Code Export C# xUnit should export a suite with just one new window util method when there are multiple commands that open a new window 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Remote;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using Xunit;
namespace DefaultSuite
{
public class SuiteTests : IDisposable {
  public IWebDriver driver {get; private set;}
  public IDictionary<String, Object> vars {get; private set;}
  public IJavaScriptExecutor js {get; private set;}
  public SuiteTests()
  {
    driver = new ChromeDriver();
    js = (IJavaScriptExecutor)driver;
    vars = new Dictionary<String, Object>();
  }
  public void Dispose()
  {
    driver.Quit();
  }
  public string waitForWindow(int timeout) {
    try {
      Thread.Sleep(timeout);
    } catch(Exception e) {
      Console.WriteLine(\\"{0} Exception caught.\\", e);
    }
    var whNow = ((IReadOnlyCollection<object>)driver.WindowHandles).ToList();
    var whThen = ((IReadOnlyCollection<object>)vars[\\"WindowHandles\\"]).ToList();
    if (whNow.Count > whThen.Count) {
      return whNow.Except(whThen).First().ToString();
    } else {
      return whNow.First().ToString();
    }
  }
  public void selectwindow() 
  {
    driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/windows\\");
    vars[\\"WindowHandles\\"] = driver.WindowHandles;
    driver.FindElement(By.LinkText(\\"Click Here\\")).Click();
    vars[\\"win9425\\"] = waitForWindow(2000);
    driver.SwitchTo().Window(vars[\\"win9425\\"].ToString());
    Assert.Equal(driver.Title, \\"New Window\\");
  }
  [Fact]
  public void Reuse() {
    selectwindow();
  }
  [Fact]
  public void Selectwindow() {
    driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/windows\\");
    vars[\\"WindowHandles\\"] = driver.WindowHandles;
    driver.FindElement(By.LinkText(\\"Click Here\\")).Click();
    vars[\\"win9425\\"] = waitForWindow(2000);
    driver.SwitchTo().Window(vars[\\"win9425\\"].ToString());
    Assert.Equal(driver.Title, \\"New Window\\");
  }
}
}"
`;

exports[`Code Export C# xUnit should export a test 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Remote;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using Xunit;
public class SuiteTests : IDisposable {
  public IWebDriver driver {get; private set;}
  public IDictionary<String, Object> vars {get; private set;}
  public IJavaScriptExecutor js {get; private set;}
  public SuiteTests()
  {
    driver = new ChromeDriver();
    js = (IJavaScriptExecutor)driver;
    vars = new Dictionary<String, Object>();
  }
  public void Dispose()
  {
    driver.Quit();
  }
  [Fact]
  public void Login() {
    driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/login\\");
    driver.Manage().Window.Size = new System.Drawing.Size(1440, 1177);
    driver.FindElement(By.Id(\\"username\\")).SendKeys(\\"tomsmith\\");
    driver.FindElement(By.Id(\\"password\\")).SendKeys(\\"SuperSecretPassword!\\");
    driver.FindElement(By.CssSelector(\\"#login button\\")).Click();
    Assert.Equal(driver.FindElement(By.CssSelector(\\".flash.success\\")).Text, \\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\");
  }
}
"
`;

exports[`Code Export C# xUnit should export a test with a reused test method 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Remote;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using Xunit;
public class SuiteTests : IDisposable {
  public IWebDriver driver {get; private set;}
  public IDictionary<String, Object> vars {get; private set;}
  public IJavaScriptExecutor js {get; private set;}
  public SuiteTests()
  {
    driver = new ChromeDriver();
    js = (IJavaScriptExecutor)driver;
    vars = new Dictionary<String, Object>();
  }
  public void Dispose()
  {
    driver.Quit();
  }
  public void login() 
  {
    driver.Navigate().GoToUrl(\\"https://the-internet.herokuapp.com/\\");
    driver.FindElement(By.LinkText(\\"Form Authentication\\")).Click();
    driver.FindElement(By.Id(\\"username\\")).SendKeys(vars[\\"username\\"].ToString());
    driver.FindElement(By.Id(\\"password\\")).SendKeys(vars[\\"password\\"].ToString());
    if ((Boolean) js.ExecuteScript(\\"return (true)\\")) {
      driver.FindElement(By.CssSelector(\\".fa\\")).Click();
    }
  }
  [Fact]
  public void Validcredentials() {
    vars[\\"username\\"] = \\"tomsmith\\";
    vars[\\"password\\"] = \\"SuperSecretPassword!\\";
    login();
  }
}
"
`;

exports[`Code Export C# xUnit should export a test with commands that open a new window 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Remote;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using Xunit;
public class SuiteTests : IDisposable {
  public IWebDriver driver {get; private set;}
  public IDictionary<String, Object> vars {get; private set;}
  public IJavaScriptExecutor js {get; private set;}
  public SuiteTests()
  {
    driver = new ChromeDriver();
    js = (IJavaScriptExecutor)driver;
    vars = new Dictionary<String, Object>();
  }
  public void Dispose()
  {
    driver.Quit();
  }
  public string waitForWindow(int timeout) {
    try {
      Thread.Sleep(timeout);
    } catch(Exception e) {
      Console.WriteLine(\\"{0} Exception caught.\\", e);
    }
    var whNow = ((IReadOnlyCollection<object>)driver.WindowHandles).ToList();
    var whThen = ((IReadOnlyCollection<object>)vars[\\"WindowHandles\\"]).ToList();
    if (whNow.Count > whThen.Count) {
      return whNow.Except(whThen).First().ToString();
    } else {
      return whNow.First().ToString();
    }
  }
  [Fact]
  public void Selectwindow() {
    driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/\\");
    driver.Manage().Window.Size = new System.Drawing.Size(1260, 1027);
    driver.FindElement(By.LinkText(\\"Multiple Windows\\")).Click();
    vars[\\"WindowHandles\\"] = driver.WindowHandles;
    driver.FindElement(By.LinkText(\\"Click Here\\")).Click();
    vars[\\"win9625\\"] = waitForWindow(2000);
    vars[\\"root\\"] = driver.CurrentWindowHandle;
    driver.SwitchTo().Window(vars[\\"win9625\\"].ToString());
    Assert.Equal(driver.Title, \\"New Window\\");
    driver.SwitchTo().Window(vars[\\"root\\"].ToString());
    Assert.Equal(driver.Title, \\"The Internet\\");
  }
}
"
`;

exports[`Code Export C# xUnit should export a test with grid execution 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Remote;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using Xunit;
public class SuiteTests : IDisposable {
  public IWebDriver driver {get; private set;}
  public IDictionary<String, Object> vars {get; private set;}
  public IJavaScriptExecutor js {get; private set;}
  public SuiteTests()
  {
    driver = new RemoteWebDriver(new Uri(\\"http://localhost:4444/wd/hub\\"), new FirefoxOptions().ToCapabilities());
    js = (IJavaScriptExecutor)driver;
    vars = new Dictionary<String, Object>();
  }
  public void Dispose()
  {
    driver.Quit();
  }
  [Fact]
  public void Login() {
    driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/login\\");
    driver.Manage().Window.Size = new System.Drawing.Size(1440, 1177);
    driver.FindElement(By.Id(\\"username\\")).SendKeys(\\"tomsmith\\");
    driver.FindElement(By.Id(\\"password\\")).SendKeys(\\"SuperSecretPassword!\\");
    driver.FindElement(By.CssSelector(\\"#login button\\")).Click();
    Assert.Equal(driver.FindElement(By.CssSelector(\\".flash.success\\")).Text, \\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\");
  }
}
"
`;
